--- a/main/templates/home_page.html
+++ b/main/templates/home_page.html
@@ -15,14 +15,11 @@
                     <!-- Button to show if profile created -->
                     <div class="col-lg-6">
                         <p class="lead">
-                            <a href="#" class="btn btn-lg btn-secondary">Enter</a></p>
-                    </div>
-
-                    <!-- Button to show if profile is NOT created -->
-                    <div class="col-lg-6">
-                        <p class="lead">
-                            <a href="#" class="btn btn-lg btn-secondary">Create Profile</a>
-                        </p>
+                            {% if hp %}
+                                <a href="#" class="btn btn-lg btn-secondary">Enter</a></p>
+                            {% else %}
+                                   <a href="#" class="btn btn-lg btn-secondary">Create Profile</a>
+                            {% endif %}
                     </div>
 
                 </div>
