--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load profiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,23 +23,26 @@
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    {% has_profile as hp %}
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Add Pet</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Add Photo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
-            </li>
+            {% if hp %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dashboard</a>
+                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="#">Add Pet</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="#">Add Photo</a>#}
+{#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Profile</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
