dashboard template logic for buttons added.

--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -1,11 +1,7 @@
 {%  extends 'base.html' %}
+
 {% block page_content %}
-    <!-- If there are NO pet photos -->
-    <h1 class='text-center'>No pet photos yet</h1>
-    <div class=" row d-flex justify-content-center align-content-center">
-        <!-- Button to Add a new Photo -->
-        <a href="#" class="btn btn-lg btn-secondary row align-self-baseline">Add Photo</a>
-    </div>
+    {% if pets %}
 
     <!-- If there are pet photos -->
     <h1 class='text-center'>All Pet Photos</h1>
@@ -49,5 +45,12 @@
         </div>
     </div>
     <!-- End Pet Photos -->
-
+    {% else %}
+        <!-- If there are NO pet photos -->
+    <h1 class='text-center'>No pet photos yet</h1>
+    <div class=" row d-flex justify-content-center align-content-center">
+        <!-- Button to Add a new Photo -->
+        <a href="#" class="btn btn-lg btn-secondary row align-self-baseline">Add Photo</a>
+    </div>
+    {% endif %}
 {% endblock %}
