--- a/templates/base.html
+++ b/templates/base.html
@@ -31,16 +31,18 @@
             </li>
             {% if hp %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                 </li>
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="#">Add Pet</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="#">Add Photo</a>#}
-{#                </li>#}
+                {% if not hide_additional_nav_items %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Add Pet</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Add Photo</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                 </li>
             {% endif %}
         </ul>
