--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                     </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    <a class="nav-link" href="{% url 'profile details' %}">Profile</a>
                 </li>
             {% endif %}
         </ul>
